--- a/mapsForStoryboard.qmd
+++ b/mapsForStoryboard.qmd
@@ -7856,35 +7856,6 @@ input_zz <- rbind(bind23, bind24) %>%
 big_input <- rbind(input_w3, input_fb, input_zz) %>% 
   pivot_wider(names_from = ID, values_from = binary)
 ```
-
-```{r prepare-combined-routes}
-routes_w3 <- 
-  pks_w3 %>% 
-    filter(ID %in% W3_IDs) %>% 
-  mutate(ID = paste0("W3_",ID)) %>% 
-  select(-wshed)
-
-routes_fb <- 
-  pks_fb %>%
-    filter(ID %in% FB_IDs) %>%
-  mutate(ID = paste0("FB_",ID)) %>% 
-  select(-wshed)
-  #filter(pk != 1) %>% 
-  
-routes_zz <- 
-  pks_zz %>%
-    filter(ID %in% ZZ_IDs) %>% 
-    mutate(ID = paste0("ZZ_",ID)) %>% 
-  select(-wshed)
-big_routes <- 
-  rbind(routes_w3, routes_fb, routes_zz) %>% 
-  filter(pk != 1) %>% 
-  arrange(desc(pk)) %>% 
-  mutate(down = lag(ID)) %>% 
-  rename("up" = ID) %>% drop_na() %>% 
-  select(up, down)
-```
-
 ```{r all-combos-functions}
 input <- big_input
 calc_support_combos <- function(up, down, input){
@@ -8024,37 +7995,25 @@ fantastic_four_combos <- function(routes, shed){
     #if statements to detect timescale, calculate appropriate inputs
     timescale <- theFour[q]
   if(timescale == "30mins"){
-    input <- rbind(input_w3, input_fb, input_zz) %>%
-      filter(wshed == shed, mins %in% c(0, 30)) %>%
-      select(datetime, binary, ID) %>%
-      mutate(ID = paste0("r_", ID)) %>%
-      pivot_wider(names_from = ID, values_from = binary)
+    input <- big_input %>%
+      filter(mins %in% c(0, 30))
     timestep <- minutes(30)
   } 
   else if(timescale == "hourly"){
-    input <- rbind(input_w3, input_fb, input_zz) %>%
-      filter(wshed == shed, mins %in% c(0)) %>%
-      select(datetime, binary, ID) %>%
-      mutate(ID = paste0("r_", ID)) %>%
-      pivot_wider(names_from = ID, values_from = binary)
+    input <- big_input %>%
+      filter(mins %in% c(0))
     timestep <- hours(1)
   } 
   else if(timescale == "4hr"){
-    input <- rbind(input_w3, input_fb, input_zz) %>%
+    input <- big_input %>%
       mutate(hour = hour(datetime)) %>% 
-      filter(wshed == shed, hour %in% c(0,4,8,12,16,20,24), mins %in% c(0)) %>%
-      select(datetime, binary, ID) %>%
-      mutate(ID = paste0("r_", ID)) %>%
-      pivot_wider(names_from = ID, values_from = binary)
+      filter(hour %in% c(0,4,8,12,16,20,24), mins %in% c(0))
     timestep <- hours(4)
   } 
   else if(timescale == "daily"){
-    input <- rbind(input_w3, input_fb, input_zz) %>%
+    input <- big_input %>%
       mutate(hour = hour(datetime)) %>% 
-      filter(wshed == shed, hour %in% c(12), mins %in% c(0)) %>%
-      select(datetime, binary, ID) %>%
-      mutate(ID = paste0("r_", ID)) %>%
-      pivot_wider(names_from = ID, values_from = binary)
+      filter(hour %in% c(12), mins %in% c(0))
     timestep <- days(1)
   } 
   else {
@@ -8066,7 +8025,7 @@ fantastic_four_combos <- function(routes, shed){
     if(q == 1) fanfar <- out
     if(q > 1) fanfar <- rbind(fanfar, out)
   }
-  fanfar$shed <- shed
+  
   return(fanfar)
 }
 
@@ -8080,48 +8039,175 @@ routes_w3 <- read_csv("w3_flowrouting.csv") %>%
 
 
 #must calculate prop values after and outside of fantastic 4
-calc_props <- function(routes, shed){
-  full_combos <- fantastic_four_combos(routes, shed)
+calc_props <- function(routes){
+  full_combos <- fantastic_four_combos(routes)
 total_state_changes <- full_combos %>% 
     filter(Sequence != 0011, Sequence != 1100) %>% 
-    group_by(up, down, timescale, shed) %>% 
+    group_by(up, down, timescale) %>% 
     summarise(totals = sum(Frequency))
 supports <- c("0001","0111","1101", "0100")
 
 hierarchical_changes <- full_combos %>% 
     filter(Sequence != 0011, Sequence != 1100) %>% 
     filter(Sequence %in% supports) %>% 
-    group_by(up, down, timescale, shed) %>%  
+    group_by(up, down, timescale) %>%  
     summarise(hierarchical = sum(Frequency)) 
 
 un_split <- total_state_changes %>% 
-  left_join(hierarchical_changes, by = c("up", "down", "shed", "timescale")) %>% 
+  left_join(hierarchical_changes, by = c("up", "down", "timescale")) %>% 
   mutate(prop = hierarchical/totals) %>% 
   mutate_all(~replace(., is.na(.), 0))
 return(un_split)
 }
 
-calc_props(big_routes, "W3")
-
-#code used to develop calc_props!
-calc_props(routes_w3, "W3")
-total_state_changes <- test %>% 
-    filter(Sequence != 0011, Sequence != 1100) %>% 
-    group_by(up, down, timescale, shed) %>% 
-    summarise(totals = sum(Frequency))
-supports <- c("0001","0111","1101", "0100")
-
-hierarchical_changes <- test %>% 
-    filter(Sequence != 0011, Sequence != 1100) %>% 
-    filter(Sequence %in% supports) %>% 
-    group_by(up, down, timescale, shed) %>%  
-    summarise(hierarchical = sum(Frequency)) 
-
-un_split <- total_state_changes %>% 
-  left_join(hierarchical_changes, by = c("up", "down", "shed", "timescale")) %>% 
-  mutate(prop = hierarchical/totals) %>% 
-  mutate_all(~replace(., is.na(.), 0))
-un_split
-
-#use this chunk to re-run everything
+big_output <- calc_props(big_routes)
 ```
+```{r prepare-combined-routes}
+routes_w3 <- 
+  pks_w3 %>% 
+    filter(ID %in% W3_IDs) %>% 
+  mutate(ID = paste0("W3_",ID)) %>% 
+  select(-wshed)
+
+routes_fb <- 
+  pks_fb %>%
+    filter(ID %in% FB_IDs) %>%
+  mutate(ID = paste0("FB_",ID)) %>% 
+  select(-wshed)
+  #filter(pk != 1) %>% 
+  
+routes_zz <- 
+  pks_zz %>%
+    filter(ID %in% ZZ_IDs) %>% 
+    mutate(ID = paste0("ZZ_",ID)) %>% 
+  select(-wshed)
+big_routes <- 
+  rbind(routes_w3, routes_fb, routes_zz) %>% 
+  filter(pk != 1) %>% 
+  arrange(desc(pk)) %>% 
+  mutate(down = lag(ID)) %>% 
+  rename("up" = ID) %>% drop_na() %>% 
+  select(up, down)
+```
+```{r plot-big-results}
+big_output %>% 
+  # mutate(timescale = fct_relevel("timescale",
+  #                             c("30mins", "hourly", "4hr", "daily"))) 
+  ggplot(aes(x = prop, y = after_stat(density))) +
+geom_density(aes(fill = timescale, color = timescale), alpha = 0.5
+  )+
+    #geom_density(alpha = 0.5, lty = 3)+
+      geom_vline(xintercept = 0.5, lty = 2, alpha = 0.5)+
+    theme_bw()+
+  #ylim(c(0, 8.75))+
+  #xlim(c(0,1))+
+  labs(title = "One watershed, one world",
+       subtitle = "What if a hierarchy transcended watershed boundaries?",
+       x = "Proportion of time followed",
+       y = "Density")
+```
+
+#Identify individual events, to run my analysis for each event- how hierarchical was each precipitation event?
+```{r figure-out-hydroEvents-pacakge}
+#testing out package that will automatically extract rising and falling limb
+#install.packages("hydroEvents")
+library(hydroEvents)
+#qdata = WQ_Q$qdata[[1]]
+#BF_res = eventBaseflow(qdata$Q_cumecs)
+#limbs(data = qdata$Q_cumecs, dates = NULL, events = BF_res, main = "with 'eventBaseflow'")
+#Use this plot to manually extract rising and falling limbs
+
+
+
+plot <- justQ %>%  
+  ggplot(aes(x = DATETIME, y = Q_mm_day))+
+  geom_line()+
+  geom_point(aes(color = start))
+
+ggplotly(plot)
+
+justQ <- q_23_plotting %>% 
+  select(datetime, Q_mm_day) %>% 
+  arrange(datetime) %>% 
+  unique() %>% 
+  drop_na() %>% 
+  mutate(lab = as.numeric(row_number()))
+
+#justQ[5812:5826,]
+  
+BF_res <- eventBaseflow(justQ$Q_mm_day, BFI_Th = 0.5, min.diff = 1)
+limbs(data = justQ$Q_mm_day, 
+               dates =justQ$datetime, 
+               events = BF_res, 
+               to.plot = TRUE)
+
+#more tidy attempt
+events <- lick %>% 
+  mutate(event = as.numeric(row_number())) %>% 
+  select(ris.srt:event) %>% 
+  pivot_longer(cols = ris.srt:fal.end) %>% 
+  rename(lab = value) %>% 
+  left_join(justQ, by = "lab") %>% 
+  mutate(startOrstop = substr(name, 5,7),
+         name = substr(name, 1,3)) 
+
+#sometimes you have to use a for loop
+id_events <- function(df, ){
+  
+}
+
+number_of_events <- length(unique(events$event))
+for(i in 1:number_of_events){
+  one_event <- events %>% 
+    filter(event == i)
+  
+  #rising start and end
+  start_df <- one_event %>% 
+    filter(name == "ris" & startOrstop == "srt")
+  start <- start_df$DATETIME[1]
+  print(start)
+  # justQ %>% 
+  #   filter(DATETIME >= start & DATETIME <= end)
+#output a dataframe with all dates, event number id, rising or falling limb, and end
+}
+
+#so frustrated, the wheels are spinning, just ditch this for now and come back to it later.
+
+```
+```{r identifying-events}
+start <- ymd_hms("2023-7-20 00:00:00")
+stop <- ymd_hms("2023-10-22 00:00:00")
+
+
+q_23_plotting <- q_23_f %>% 
+    filter(DATETIME > start & DATETIME < stop) %>% 
+  rename("datetime" = DATETIME)
+q_23_plotting %>% 
+ggplot(aes(x  = datetime, y = Q_mm_day))+
+  geom_line()+
+  labs(title = "Discharge from W3, July to Nov 2023",
+       x = "",
+       y = "Instantaneous Q (mm/day)")+
+  theme_classic()
+
+#calculate baseflow
+bf = baseflowB(q_23_plotting$Q_mm_day, alpha = 0.980)
+#subtract baseflow from discharge
+PoT_res = eventPOT(q_23_plotting$Q_mm_day - bf$bf, threshold = 1, min.diff = 1)
+#plot the events
+plotEvents(data = q_23_plotting$Q_mm_day, events = PoT_res, xlab = "Index", ylab = "Flow (ML/day)", colpnt = "#E41A1C", colline = "#377EB8", main = "eventPOT")
+
+#now, extract just the start column, then get each window and run through scoring algorithm
+PoT_res$srt
+
+q_23_plotting %>% 
+  select(datetime, Q_mm_day) %>% 
+  arrange(datetime) %>% 
+  unique() %>% 
+  mutate(lab = as.numeric(row_number())) %>% 
+  mutate(group = data.table::rleid(lab, cols = PoT_res$srt))
+
+
+
+```
+
